--- a/src/app/ModuloAdministracion/pg-principaladministracion/pg-principaladministracion.component.html
+++ b/src/app/ModuloAdministracion/pg-principaladministracion/pg-principaladministracion.component.html
@@ -3,40 +3,32 @@
     <p-tabPanel>
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
-            <span>&nbsp;Sección</span>
+            <span>&nbsp;Negocios</span>
         </ng-template>
-        <app-pg-seccion></app-pg-seccion>
+        <app-pg-negocio></app-pg-negocio>
        
     </p-tabPanel>
     <p-tabPanel header="Header II">
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
-            <span>&nbsp;Dimensiones</span>
+            <span>&nbsp;Ciudadanos</span>
         </ng-template>
-        <app-pg-dimension></app-pg-dimension>
+        <app-pg-ciudadano></app-pg-ciudadano>
         
     </p-tabPanel>
     <p-tabPanel header="Header III">
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
-            <span>&nbsp;Preguntas</span>
-        
+            <span>&nbsp;Materiales</span>
         </ng-template>
-        <p>
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
-            qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.
-        </p>
+        <app-pg-material></app-pg-material>
     </p-tabPanel>
     <p-tabPanel header="Header III">
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
-            <span>&nbsp;Respuestas</span>
-            
+            <span>&nbsp;Puntos Verdes</span>
         </ng-template>
-        <p>
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
-            qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.
-        </p>
+        <app-pg-puntoverde></app-pg-puntoverde>
     </p-tabPanel>
     <p-tabPanel header="Header III">
         <ng-template pTemplate="header">
