--- a/src/app/Template/templateAdmin/footeradmin/footeradmin.component.html
+++ b/src/app/Template/templateAdmin/footeradmin/footeradmin.component.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-    <span style="color: white">Escuela Superior Politécnica de Chimborazo  &copy;  2024</span>
+    <span style="color: white">GreenPoint  &copy;  2024</span>
 </footer>
