--- a/src/app/ModuloAdministracion/pg-principaladministracion/pg-principaladministracion.component.html
+++ b/src/app/ModuloAdministracion/pg-principaladministracion/pg-principaladministracion.component.html
@@ -3,25 +3,18 @@
     <p-tabPanel>
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
-            <span>&nbsp;Negocios</span>
+            <span>&nbsp;Materiales</span>
         </ng-template>
-        <app-pg-negocio></app-pg-negocio>
+        <app-pg-material></app-pg-material>
        
     </p-tabPanel>
     <p-tabPanel header="Header II">
         <ng-template pTemplate="header">
             <i class="pi pi-cog"></i>
-            <span>&nbsp;Ciudadanos</span>
+            <span>&nbsp;Ofertas</span>
         </ng-template>
-        <app-pg-ciudadano></app-pg-ciudadano>
+        <app-pg-oferta></app-pg-oferta>
         
-    </p-tabPanel>
-    <p-tabPanel header="Header III">
-        <ng-template pTemplate="header">
-            <i class="pi pi-cog"></i>
-            <span>&nbsp;Materiales</span>
-        </ng-template>
-        <app-pg-material></app-pg-material>
     </p-tabPanel>
     <p-tabPanel header="Header III">
         <ng-template pTemplate="header">
@@ -29,6 +22,14 @@
             <span>&nbsp;Puntos Verdes</span>
         </ng-template>
         <app-pg-puntoverde></app-pg-puntoverde>
+
+    </p-tabPanel>
+    <p-tabPanel header="Header III">
+        <ng-template pTemplate="header">
+            <i class="pi pi-cog"></i>
+            <span>&nbsp;Negocios</span>
+        </ng-template>
+        <app-pg-negocio></app-pg-negocio>
     </p-tabPanel>
     <p-tabPanel header="Header III">
         <ng-template pTemplate="header">
