--- a/src/app/ModuloAdministracion/pg-material/pg-material.component.html
+++ b/src/app/ModuloAdministracion/pg-material/pg-material.component.html
@@ -1,7 +1,7 @@
 <div class="card separador-componentes">
     <p-toolbar>
       <div class="p-toolbar-group-center">
-        <p>INFORMACIÓN NEGOCIOS</p>
+        <p>INFORMACIÓN MATERIALES</p>
       </div>
       <div class="p-toolbar-group-end">
         <p-button
@@ -26,22 +26,21 @@
       <ng-template pTemplate="header">
         <tr>
           <th >#</th>
-          <th pSortableColumn="code" >
-            VALOR <p-sortIcon field="code"></p-sortIcon>
-          </th>
-  
+          <th>NOMBRE</th>
+          <th >VALOR X LIBRA (GC)</th>
           <th >ESTADO</th>
           <th >ACCIONES</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-customer>
         <tr>
-          <td>{{ customer.id_dimension }}</td>
-          <td>{{ customer.int_valor }}</td>
+          <td>{{ customer.materiales_id }}</td>
+          <td>{{ customer.tipo }}</td>
+          <td>{{ customer.valor_por_libra }}</td>
           <td>
           
-            <p-tag *ngIf="customer.bl_estado == false" severity="danger" [value]="'DESACTIVADO'"></p-tag>
-            <p-tag *ngIf="customer.bl_estado == true" severity="success" [value]="'ACTIVO'"></p-tag>
+            <p-tag *ngIf="customer.estado == false" severity="danger" [value]="'DESACTIVADO'"></p-tag>
+            <p-tag *ngIf="customer.estado == true" severity="success" [value]="'ACTIVO'"></p-tag>
            
           <td>
             <p-button
@@ -76,10 +75,17 @@
   </ng-template>
   <ng-template pTemplate="content">
     <div class="p-inputgroup">
+        <span class="p-inputgroup-addon">
+            <i class="pi pi-pencil"></i>
+        </span>
+        <input pInputText placeholder="Nombre" [(ngModel)]="strnombre" class="p-inputtext-sm" (input)="strnombre = strnombre"/>
+      </div>
+
+    <div class="p-inputgroup" style="margin-top: 15px;">
       <span class="p-inputgroup-addon">
           <i class="pi pi-pencil"></i>
       </span>
-      <input pInputText placeholder="Valor" [(ngModel)]="intvalor" class="p-inputtext-sm" (input)="intvalor = intvalor"/>
+      <input pInputText placeholder="Valor por libra" [(ngModel)]="intvalor" class="p-inputtext-sm" (input)="intvalor = intvalor"/>
     </div>
   </ng-template>
   
@@ -105,8 +111,15 @@
       <span class="p-inputgroup-addon">
           <i class="pi pi-pencil"></i>
       </span>
-      <input pInputText placeholder="Valor" [(ngModel)]="objSeleccion.int_valor" class="p-inputtext-sm"/>
+      <input pInputText placeholder="Valor" [(ngModel)]="objSeleccion.tipo" class="p-inputtext-sm"/>
     </div>
+
+    <div class="p-inputgroup" style="margin-top: 15px;">
+        <span class="p-inputgroup-addon">
+            <i class="pi pi-pencil"></i>
+        </span>
+        <input pInputText placeholder="Valor" [(ngModel)]="objSeleccion.valor_por_libra" class="p-inputtext-sm"/>
+      </div>
   </ng-template>
   
   <ng-template pTemplate="footer">
@@ -131,7 +144,7 @@
       <span class="p-inputgroup-addon">
           <i class="pi pi-pencil"></i>
       </span>
-      <input pInputText placeholder="Estado" [(ngModel)]="objSeleccion.int_valor" class="p-inputtext-sm" readonly/>
+      <input pInputText placeholder="Estado" [(ngModel)]="objSeleccion.tipo" class="p-inputtext-sm" readonly/>
     </div>
   </ng-template>
   
