--- a/src/app/Template/templateAdmin/headeradmin/headeradmin.component.html
+++ b/src/app/Template/templateAdmin/headeradmin/headeradmin.component.html
@@ -1,10 +1,10 @@
 <p-menubar >
     <ng-template pTemplate="start">
-        <p-avatar image="/assets/img/espoch-marca.jpeg" shape="circle" />
+        <p-avatar image="/assets/img/gp.ico" shape="circle" />
     </ng-template>
   <ng-template pTemplate="end">
   
-    <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-2" shape="circle" />
+    <p-avatar image="https://icones.pro/wp-content/uploads/2021/02/icone-utilisateur-vert.png" class="mr-2" shape="circle" />
    
 </ng-template>
 </p-menubar>
