--- a/src/app/Template/pg-inicioportada/pg-inicioportada.component.css
+++ b/src/app/Template/pg-inicioportada/pg-inicioportada.component.css
@@ -112,7 +112,7 @@ body {
     padding: 15px 0;
   }
   #header.header-scrolled, #header.header-inner-pages {
-    background: rgba(40, 58, 90, 0.9);
+    background: rgba(40, 90, 45, 0.9);
   }
   #header .logo {
     font-size: 30px;
@@ -166,7 +166,7 @@ body {
     margin-left: 5px;
   }
   .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-    color: #47b2e4;
+    color: #000000;
   }
   .navbar .getstarted, .navbar .getstarted:focus {
     padding: 8px 20px;
@@ -174,7 +174,7 @@ body {
     border-radius: 50px;
     color: #fff;
     font-size: 14px;
-    border: 2px solid #47b2e4;
+    border: 2px solid #013634;
     font-weight: 600;
   }
   .navbar .getstarted:hover, .navbar .getstarted:focus:hover {
@@ -204,7 +204,7 @@ body {
     font-size: 14px;
     text-transform: none;
     font-weight: 500;
-    color: #0c3c53;
+    color: rgb(12, 83, 25);
   }
   .navbar .dropdown ul a i {
     font-size: 12px;
@@ -293,14 +293,14 @@ body {
   .navbar-mobile a, .navbar-mobile a:focus {
     padding: 10px 20px;
     font-size: 15px;
-    color: #37517e;
+    color: #21732c;
   }
   .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
     color: #47b2e4;
   }
   .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
     margin: 15px;
-    color: #37517e;
+    color: #21732c;
   }
   .navbar-mobile .dropdown ul {
     position: static;
@@ -335,7 +335,7 @@ body {
   #hero {
     width: 100%;
     height: 80vh;
-    background: #37517e;
+    background: #42af20;
   }
   #hero .container {
     padding-top: 72px;
