--- a/src/app/Template/pg-inicioportada/pg-inicioportada.component.css
+++ b/src/app/Template/pg-inicioportada/pg-inicioportada.component.css
@@ -38,7 +38,7 @@ body {
     bottom: 0;
     z-index: 9999;
     overflow: hidden;
-    background: #37517e;
+    background: #47af4e;
   }
   
   #preloader:before {
@@ -46,7 +46,7 @@ body {
     position: fixed;
     top: calc(50% - 30px);
     left: calc(50% - 30px);
-    border: 6px solid #37517e;
+    border: 6px solid #377e3e;
     border-top-color: #fff;
     border-bottom-color: #fff;
     border-radius: 50%;
