--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -1,3 +1,17 @@
+<!--
+<form (ngSubmit)="register()">
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" [(ngModel)]="email" name="email" required>
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input type="password" [(ngModel)]="password" name="password" required>
+    </div>
+     Otros campos si es necesario --> <!--
+    <button type="submit">Register</button>
+  </form>
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -825,3 +839,4 @@
 </body>
 
 </html>
+  
