--- a/src/app/Template/pg-login/pg-login.component.html
+++ b/src/app/Template/pg-login/pg-login.component.html
@@ -1,3 +1,16 @@
+<!--
+<form (ngSubmit)="login()">
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" [(ngModel)]="email" name="email" required>
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input type="password" [(ngModel)]="password" name="password" required>
+    </div>
+    <button type="submit">Login</button>
+  </form>
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -825,3 +838,4 @@
 </body>
 
 </html>
+  
