--- a/src/app/Template/pg-inicioportada/pg-inicioportada.component.css
+++ b/src/app/Template/pg-inicioportada/pg-inicioportada.component.css
@@ -1419,7 +1419,7 @@ body {
   --------------------------------------------------------------*/
   #footer {
     font-size: 14px;
-    background: #37517e;
+    background: #3b763a;
   }
   #footer .footer-newsletter {
     padding: 50px 0;
