--- a/src/app/Template/pg-login/pg-login.component.html
+++ b/src/app/Template/pg-login/pg-login.component.html
@@ -66,10 +66,6 @@
                 <a href="">
                   <img src="assets/img/hero-img.png" alt="" width="auto" height="100px" style="z-index: 100;">
                 </a>
-                <!--<a href="" class="logo d-flex align-items-center w-auto">
-                  <img src="assets/img/hero-img.png" alt="" width="auto" height="100px">
-                  <span class="d-none d-lg-block">GreenPoint</span>
-                </a>-->
               </div><!-- End Logo -->
 
               <div class="card mb-3">
@@ -84,7 +80,7 @@
                   <form class="row g-3 needs-validation" novalidate>
 
                     <div class="col-12">
-                      <label for="yourUsername" class="form-label">Correo</label>
+                      <label for="yourUsername" class="form-label">Correo electrónico</label>
                       <div class="input-group has-validation">
                         <span class="input-group-text" id="inputGroupPrepend">@</span>
                         <input type="text" name="username" class="form-control" id="yourUsername" required>
@@ -105,7 +101,7 @@
                       </div>
                     </div>
                     <div class="col-12">
-                      <button class="btn btn-primary w-100" type="submit">Login</button>
+                      <button class="btn btn-primary w-100" type="submit" >Iniciar Sesión</button>
                     </div>
                     <div class="col-12">
                       <p class="small mb-0">No tienes cuenta? <a href="/registro">Regístrate ahora!</a></p>
