--- a/src/app/Template/pg-login/pg-login.component.css
+++ b/src/app/Template/pg-login/pg-login.component.css
@@ -1240,7 +1240,7 @@ h6 {
 }
 
 .btn:hover {
-  background: #74d285;
+  background: #60af6f;
   color: #fff;
   padding: 8px 30px;
   border: #68cc6d;
