--- a/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
+++ b/src/app/Template/pg-inicioportada/pg-inicioportada.component.html
@@ -61,7 +61,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="/inicio">Ingresar</a></li>
+          <li><a class="nav-link scrollto" href="/login">Ingresar</a></li>
           <li><a class="getstarted scrollto" href="/registro">Comenzar</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
