--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -55,17 +55,16 @@
 <body>
 
   <main>
-    <div class="container">
+    <div class="container"><br><br><br>
 
       <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
-              <div class="d-flex justify-content-center py-4">
-                <a href="index.html" class="logo d-flex align-items-center w-auto">
-                  <img src="assets/img/logo.png" alt="">
-                  <span class="d-none d-lg-block">NiceAdmin</span>
+              <div class="d-flex justify-content-center py-4" style="position: absolute; z-index: 100; margin-bottom: 620px;">
+                <a href="">
+                  <img src="assets/img/hero-img.png" alt="" width="auto" height="100px" style="z-index: 100;">
                 </a>
               </div><!-- End Logo -->
 
@@ -73,65 +72,58 @@
 
                 <div class="card-body">
 
-                  <div class="pt-4 pb-2">
-                    <h5 class="card-title text-center pb-0 fs-4">Create an Account</h5>
-                    <p class="text-center small">Enter your personal details to create account</p>
+                  <div class="pt-4 pb-2" style="margin-top: -20px;">
+                    <h5 class="card-title text-center pb-0 fs-4">Create una Cuenta</h5>
+                    <p class="text-center small">Ingresa la siguiente informacion personal</p>
                   </div>
 
                   <form class="row g-3 needs-validation" novalidate>
                     <div class="col-12">
-                      <label for="yourName" class="form-label">Your Name</label>
-                      <input type="text" name="name" class="form-control" id="yourName" required>
-                      <div class="invalid-feedback">Please, enter your name!</div>
+                      <label for="yourName" class="form-label">Nombres</label>
+                      <input type="text" name="name" class="form-control" id="yourName" required placeholder="">
+                      <div class="invalid-feedback">Debes ingresar tus nombres!</div>
                     </div>
 
-                    <div class="col-12">
-                      <label for="yourEmail" class="form-label">Your Email</label>
-                      <input type="email" name="email" class="form-control" id="yourEmail" required>
-                      <div class="invalid-feedback">Please enter a valid Email adddress!</div>
-                    </div>
-
-                    <div class="col-12">
-                      <label for="yourUsername" class="form-label">Username</label>
+                    <div class="col-12" style="margin-top: 0px;">
+                      <label for="yourEmail" class="form-label">Correo Electrónico</label>
                       <div class="input-group has-validation">
                         <span class="input-group-text" id="inputGroupPrepend">@</span>
-                        <input type="text" name="username" class="form-control" id="yourUsername" required>
-                        <div class="invalid-feedback">Please choose a username.</div>
+                        <input type="email" name="email" class="form-control" id="yourEmail" required>
+                        <div class="invalid-feedback">Debes ingresar tu correo electrónico!</div>
                       </div>
                     </div>
 
-                    <div class="col-12">
-                      <label for="yourPassword" class="form-label">Password</label>
-                      <input type="password" name="password" class="form-control" id="yourPassword" required>
-                      <div class="invalid-feedback">Please enter your password!</div>
+                    <div class="col-12" style="margin-top: 0px;">
+                      <label for="yourApellidos" class="form-label">Apellidos</label>
+                      <div class="input-group has-validation">
+                        <input type="text" name="username" class="form-control" id="yourApellidos" required>
+                        <div class="invalid-feedback">Ingresa tu nombre de usuario.</div>
+                      </div>
                     </div>
 
-                    <div class="col-12">
+                    <div class="col-12" style="margin-top: 0px;">
+                      <label for="yourPassword" class="form-label">Contraseña</label>
+                      <input type="password" name="password" class="form-control" id="yourPassword" required>
+                      <div class="invalid-feedback">Debes ingresar tu contraseña!</div>
+                    </div>
+
+                    <div class="col-12" style="margin-top: 0px;">
                       <div class="form-check">
                         <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms" required>
-                        <label class="form-check-label" for="acceptTerms">I agree and accept the <a href="#">terms and conditions</a></label>
-                        <div class="invalid-feedback">You must agree before submitting.</div>
+                        <label class="form-check-label" for="acceptTerms">Estoy de acuerdo y acepto los <a href="#">terminos y condiciones</a></label>
+                        <div class="invalid-feedback">Debes aceptar antes de enviar.</div>
                       </div>
                     </div>
-                    <div class="col-12">
-                      <button class="btn btn-primary w-100" type="submit">Create Account</button>
+                    <div class="col-12" style="margin-top: 0px;">
+                      <button class="btn btn-primary w-100" type="submit">Crear Cuenta</button>
                     </div>
                     <div class="col-12">
-                      <p class="small mb-0">Already have an account? <a href="pages-login.html">Log in</a></p>
+                      <p class="small mb-0">Ya tienes una cuenta? <a href="/login">Inicia sesión</a></p>
                     </div>
                   </form>
 
                 </div>
               </div>
-
-              <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-              </div>
-
             </div>
           </div>
         </div>
