--- a/src/app/Template/pg-register/pg-register.component.html
+++ b/src/app/Template/pg-register/pg-register.component.html
@@ -85,19 +85,19 @@
                     </div>
 
                     <div class="col-12" style="margin-top: 0px;">
+                      <label for="yourApellidos" class="form-label">Apellidos</label>
+                      <div class="input-group has-validation">
+                        <input type="text" name="username" class="form-control" id="yourApellidos" required>
+                        <div class="invalid-feedback">Ingresa tu nombre de usuario.</div>
+                      </div>
+                    </div>
+
+                    <div class="col-12" style="margin-top: 0px;">
                       <label for="yourEmail" class="form-label">Correo Electrónico</label>
                       <div class="input-group has-validation">
                         <span class="input-group-text" id="inputGroupPrepend">@</span>
                         <input type="email" name="email" class="form-control" id="yourEmail" required>
                         <div class="invalid-feedback">Debes ingresar tu correo electrónico!</div>
-                      </div>
-                    </div>
-
-                    <div class="col-12" style="margin-top: 0px;">
-                      <label for="yourApellidos" class="form-label">Apellidos</label>
-                      <div class="input-group has-validation">
-                        <input type="text" name="username" class="form-control" id="yourApellidos" required>
-                        <div class="invalid-feedback">Ingresa tu nombre de usuario.</div>
                       </div>
                     </div>
 
@@ -110,7 +110,7 @@
                     <div class="col-12" style="margin-top: 0px;">
                       <div class="form-check">
                         <input class="form-check-input" name="terms" type="checkbox" value="" id="acceptTerms" required>
-                        <label class="form-check-label" for="acceptTerms">Estoy de acuerdo y acepto los <a href="#">terminos y condiciones</a></label>
+                        <label class="form-check-label" for="acceptTerms" style="font-size: 12px;">Estoy de acuerdo y acepto los <a href="#">terminos y condiciones</a></label>
                         <div class="invalid-feedback">Debes aceptar antes de enviar.</div>
                       </div>
                     </div>
