--- a/src/app/Template/pg-login/pg-login.component.html
+++ b/src/app/Template/pg-login/pg-login.component.html
@@ -62,7 +62,7 @@
           <div class="row justify-content-center">
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
               
-              <div class="d-flex justify-content-center py-4" style="position: absolute; z-index: 100; margin-bottom: 520px;">
+              <div class="d-flex justify-content-center py-4" style="position: absolute; z-index: 100; margin-bottom: 500px;">
                 <a href="">
                   <img src="assets/img/hero-img.png" alt="" width="auto" height="100px" style="z-index: 100;">
                 </a>
@@ -88,19 +88,19 @@
                       </div>
                     </div>
 
-                    <div class="col-12">
+                    <div class="col-12" style="margin-top: 0px;">
                       <label for="yourPassword" class="form-label">Contraseña</label>
                       <input type="password" name="password" class="form-control" id="yourPassword" required>
                       <div class="invalid-feedback">Ingrese su contraseña!</div>
                     </div>
 
-                    <div class="col-12">
+                    <div class="col-12" style="margin-top: 0px;">
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
                         <label class="form-check-label" for="rememberMe">Recuerdame</label>
                       </div>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12" style="margin-top: 0px;">
                       <button class="btn btn-primary w-100" type="submit" >Iniciar Sesión</button>
                     </div>
                     <div class="col-12">
